cambios en archivos

--- a/datos-reservacion.html
+++ b/datos-reservacion.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/datos.css">
+    <link rel="stylesheet" href="./css/estilos-principal.css">
     <title>datos</title>
 </head>
 <body>
-    <div class="datos-wrapper">
+    <p style="margin: 15px"><a class="regresar" href="./alquilar.html">Regresar</a></p>
+
+    <div class="body-wrapper">
 
         <div>
-            <h1 class="datos-title">DATOS</h1>
+            <h1 class="title-fondo-verde">Renta: Información y costo</h1>
         </div>
 
         <hr>
@@ -22,8 +24,11 @@
             <p>Costo: </p>
         </div>
         <hr>
-        <button class="btn-pagar">PAGAR</button>
+        <button id="btn-proceder-pago">Proceder al pago</button>
 
     </div>
+
+    <script src="./js/moviesApp.js"></script>
+
 </body>
 </html>
